@@ -1,3 +1,10 @@
+2005-11-03	Gaius Mulley <gaius@glam.ac.uk>
+
+	* fixes to set types and subranges which in turn
+	  when applied with the patches made to ../../gcc/dwarf2out.c
+	  and also gdb/gdb/dwarf2read.c allow subranges and
+	  set types to be debugged when using the dwarf2 format.
+
 2005-10-14	Gaius Mulley <gaius@glam.ac.uk>
 
 	* fixed set type debugging information.
